# service-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml  deploy-cloud-run.yml
data/: .gitkeep
docs/: API_KEYS.md  FEATURE_OVERVIEW.md  GCP_DEPLOY.md  GITHUB_SETUP.md  PHASE_1B.md  PHASE_2.md  PRE_PHASE3_TEST_PLAN.md  SME_DEMO_PROMPTS.md  SME_INTERVIEW.md  VISION.md  WHATSAPP_SETUP.md
infra/: Pulumi.prod.yaml  Pulumi.yaml  README.md  __main__.py  requirements.txt
src/service_app/: __init__.py  catalog.py  cli.py  ingestion.py  llm.py  pricing.py  schemas.py  secrets.py  settings.py
src/service_app/api/: __init__.py  app.py  main.py
src/service_app/db/: __init__.py  base.py  bootstrap.py  models.py  session.py
src/service_app/export/: csv_export.py  pdf_export.py
src/service_app/invoices/: __init__.py  service.py
src/service_app/web/: auth.py  routes.py
src/service_app/web/templates/: base.html  invoice_detail.html  invoice_list.html  invoice_new.html  logged_out.html
src/service_app/whatsapp/: __init__.py  meta.py  reply.py  twilio_handler.py
tests/: test_api.py  test_export.py  test_invoices.py  test_web_auth.py  test_whatsapp.py
