[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "service-app"
version = "0.1.0"
description = "MVP scaffolding for trade service apps (pricing + LLM parsing via OpenRouter)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "kirtquist" }]
dependencies = [
    "openai>=1.40.0",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.4.0",
    "SQLAlchemy>=2.0.30",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["ruff>=0.5.0", "pytest>=8.0.0", "httpx>=0.27.0"]

[project.scripts]
service-app-demo = "service_app.cli:main"
service-app-api = "service_app.api.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
